# src/server/api_responses.rs
@@ -1031,6 +1031,19 @@ pub enum GetSlurmJobCorrelationsResponse {
 
 #[derive(Debug, PartialEq, Serialize, Deserialize)]
 #[must_use]
+pub enum GetRunningJobsResponse {
+    /// Successful response
+    SuccessfulResponse(models::RunningJobsResponse),
+    /// Forbidden - user does not have access
+    ForbiddenErrorResponse(models::ErrorResponse),
+    /// Not found error response
+    NotFoundErrorResponse(models::ErrorResponse),
+    /// Default error response
+    DefaultErrorResponse(models::ErrorResponse),
+}
+
+#[derive(Debug, PartialEq, Serialize, Deserialize)]
+#[must_use]
 pub enum IsWorkflowUninitializedResponse {
     /// Successful response
     SuccessfulResponse(serde_json::Value),
